# OPU

./: README.md
Notes/: 2022-10-14.md
OPU study/Notes/: 2022-10-16.md
OPUcode/OPU_Simulator/: CMakeLists.txt  Makefile
OPUcode/OPU_Simulator/example/tinyyolo_16b/: 16b-linecode.json  check16.py
OPUcode/OPU_Simulator/src/: accelerator.cc  accelerator.h  bert_activations.cc  bert_activations.h  bit_util.h  cordic.cc  cordic.h  debug_config.h  driver_bin.cc  driver_json.cc  hw_spec.h  instruction.cc  instruction.h  logging.h  nonlinear.h  smem.h  vmem.cc  vmem.h
OPUcode/OPU_Simulator/test/: utest.py
OPUstudy/Notes/: 2022-10-13.md  2022-10-19.md  2022-11-03.md  Q.md
OPUstudy/OPUpaper/: OPUInstruction.docx  OPUInstruction.xlsx
OtherLessons/MLCnotebooks/: 3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb  4_Build_End_to_End_Model.ipynb  5_Automatic_Program_Optimization.ipynb  6_Integration_with_Machine_Learning_Frameworks.ipynb  7_GPU_and_Specialized_Hardware.ipynb
OtherLessons/MLCnotebooks/assignment/: assignment1_zh.ipynb
